--- a/vignettes/dog-breed-identification.Rmd
+++ b/vignettes/dog-breed-identification.Rmd
@@ -98,7 +98,11 @@ nn_dog <- nn_module(
     resnet18$parameters %>% purrr::walk(function(param) param$requires_grad_(FALSE))
     
     num_features <- resnet18$fc$in_features
-    resnet18$fc <- torch::nn_linear(in_features = num_features, out_features = n_classes)
+    resnet18$fc <- torch::nn_linear(
+      in_features = num_features, 
+      out_features = n_classes
+    )
+    
     self$resnet18 <- resnet18
   },
   forward = function(x) {
